moved login view back to corrrect folder; style changes to fix layout issues; added dispatch of bg-blur when clearing filters

--- a/src/css/carousel.css
+++ b/src/css/carousel.css
@@ -60,7 +60,7 @@
 
 .carousel-slide  { 
 	scroll-snap-align: start;
-	padding: 0.5rem;
+	/* padding: 0.5rem; */
 	display:flex;
 	justify-content: flex-start;
 	align-items: center;
