--- a/src/css/item.css
+++ b/src/css/item.css
@@ -107,6 +107,7 @@ article.item {
 
  .item .offers {
     margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
     letter-spacing: 0.025em;
     font-size: 18px; 
 }
